@@ -623,13 +623,15 @@ def _checkFunction(module, func, c = None, main = 0, in_class = 0) :
                     else :
                         if not in_class :
                             warn = _checkGlobal(operand, module, func, lastLineNum,
-                                                _GLOBAL_DEFINED_NOT_DECLARED, main)
+                                            _GLOBAL_DEFINED_NOT_DECLARED, main)
                         if unpackCount :
                             unpackCount = unpackCount - 1
+                        else :
+                            del stack[-1]
                         if not module.moduleLineNums.has_key(operand) and main :
                             filename = func_code.co_filename
                             module.moduleLineNums[operand] = (filename, lastLineNum)
-                        # FIXME: should pop off stack
+                            
                 elif OP.LOAD_CONST(op) :
                     stack.append(Stack.Item(operand, type(operand), 1))
                     if type(operand) == types.CodeType :
